--- a/package.json
+++ b/package.json
@@ -20,10 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
+    "@apollo/server": "^4.9.5",
+    "@nestjs/apollo": "^12.0.10",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "apollo-server-express": "^3.12.1",
+    "graphql": "^16.8.1",
+    "graphql-tools": "^9.0.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
